[tool.poetry]
name = "unlp-finetuing-llama"
version = "0.1.0"
description = "Finetuning llama"
authors = ["Kolosov Ihor <108092986+Ak1yamaKiyoshi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.0"
peft = "^0.8.2"
datasets = "^2.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
